Ocultando entidad DetalleVenta

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -67,18 +67,18 @@
                 <span jhiTranslate="global.menu.entities.cliente">Cliente</span>
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a
                 class="dropdown-item"
                 routerLink="detalle-venta"
-                routerLinkActive="active"
+                routerLinkActive="disabled"
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
                 <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
                 <span jhiTranslate="global.menu.entities.detalleVenta">Detalle Venta</span>
               </a>
-            </li>
+            </li> -->
             <li>
               <a
                 class="dropdown-item"
